<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> conflict solved
<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Balloon</string>
    <string name="bubble_activity_title">Balloon</string>
    <string name="action_settings">Settings</string>
    <string name="bubble_test_stop_service">ServiceOff</string>
    <string name="bubble_tvIntro">Balloon\nEndless Creation, Seoultech\n\n</string>
    <string name="bubble_tvGPSTest">GPS temp</string>
    <string name="bubble_tvLandmarkTest">Landmark info. temp</string>
    <string name="bubble_tvPostingTest">Posting info temp</string>
    <string name="best_list_activity_title">BestList</string>
    <string name="map_list_activity_title_section1">Landmarks</string>
    <string name="map_list_activity_title_section2">Postings</string>
    <string name="landmark_activity_title">LandmarkActivity</string>
    <string name="landmark_comment_default_message">input bitch</string>
    <string name="login_activity_title">LoginActivity</string>
    <string name="join_activity_title">JoinActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="bubble_action_map_list">MapList</string>
    <string name="map_location">my location</string>
    <string name="map_list_action_bubble">Bubble</string>
    <string name="map_list_str_done">done</string>
    <string name="map_list_action_landmark_write">WRITE LANDMARK</string>
    <string name="edit_message">input bitch</string>
    <string name="title_activity_posting">PostingActivity</string>
    <string name="landmark_tv_name">title</string>
    <string name="landmark_tv_contents">contents</string>
    <string name="landmark_action_posting_write">Write Posting</string>
    <string name="landmark_write_txt_title">Landmark Name</string>
    <string name="landmark_write_edit_title_hint">ex) Mirae hall</string>
    <string name="landmark_write_txt_uniqueness">Uniqueness</string>
    <string name="landmark_write_edit_uniqueness_hint">ex)\n Handsome assistant!!!\n (is a dream..T-T)\n Miraehall number is 60! \n Com-gong has a Jool!\n (So goooooood!)</string>
    <string name="login_id">ID</string>
    <string name="login_password">password</string>
    <string name="login_nickname">nickname</string>
    <string name="login_button">Login</string>
    <string name="Join">join us</string>
    <string name="Facebook_button">Facebook</string>
    <string name="cancle">cancle</string>
    <string name="autologin">auto login</string>
    <string name="intro_activity_title">Balloon</string>
    <string name="posting_write_action_write">write</string>
    <string name="posting_write_activity_title">WRITE POSTING</string>
    <string name="posting_write_edt_title_hint">scroll warn- I\'m the bobburger conqueror!</string>
    <string name="posting_write_txt_title">title</string>
    <string name="posting_write_edt_contents_hint"></string>
    <string name="posting_write_txt_contents">contents</string>
    <string name="map_address">ya</string>
    <string name="landmark_write_action_write">write</string>    
    <string name="title_activity_photo_zoom">PhotoZoom</string> 
    <string name="user_profile_main_level">class</string>
    <string name="user_profile_user_name">cow hukhuk</string>
    <string name="user_profile_level">class: </string>
    <string name="user_profile_user_level">angmeongeongnuengdeng?</string>
    <string name="title_activity_configurations">Configurations</string>
    <string name="start_service">balloonhead start!</string>
    <string name="stop_service">balloonhead stop!</string>
    <string name="wordbubble_text">Hello</string>
    <string name="my_profile">MyProfile</string>
    <string name="preferecen">PREFERENCE</string>
    <string name="overflow">OverFlow</string>

<<<<<<< HEAD
=======
<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Balloon</string>
    <string name="bubble_activity_title">Balloon</string>
    <string name="action_settings">Settings</string>
    <string name="bubble_test_stop_service">ServiceOff</string>
    <string name="bubble_tvIntro">Balloon\nEndless Creation, Seoultech\n\n</string>
    <string name="bubble_tvGPSTest">GPS temp</string>
    <string name="bubble_tvLandmarkTest">Landmark info. temp</string>
    <string name="bubble_tvPostingTest">Posting info temp</string>
    <string name="best_list_activity_title">BestList</string>
    <string name="map_list_activity_title_section1">Landmarks</string>
    <string name="map_list_activity_title_section2">Postings</string>
    <string name="landmark_activity_title">LandmarkActivity</string>
    <string name="landmark_comment_default_message">input bitch</string>
    <string name="login_activity_title">LoginActivity</string>
    <string name="join_activity_title">JoinActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="bubble_action_map_list">MapList</string>
    <string name="map_location">my location</string>
    <string name="map_list_action_bubble">Bubble</string>
    <string name="map_list_str_done">done</string>
    <string name="map_list_action_landmark_write">WRITE LANDMARK</string>
    <string name="edit_message">input bitch</string>
    <string name="title_activity_posting">PostingActivity</string>
    <string name="landmark_tv_name">title</string>
    <string name="landmark_tv_contents">contents</string>
    <string name="landmark_action_posting_write">Write Posting</string>
    <string name="landmark_write_txt_title">Landmark Name</string>
    <string name="landmark_write_edit_title_hint">ex) Mirae hall</string>
    <string name="landmark_write_txt_uniqueness">Uniqueness</string>
    <string name="landmark_write_edit_uniqueness_hint">ex)\n Handsome assistant!!!\n (is a dream..T-T)\n Miraehall number is 60! \n Com-gong has a Jool!\n (So goooooood!)</string>
    <string name="login_id">ID</string>
    <string name="login_password">password</string>
    <string name="login_nickname">nickname</string>
    <string name="login_button">Login</string>
    <string name="Join">join us</string>
    <string name="Facebook_button">Facebook</string>
    <string name="cancle">cancle</string>
    <string name="autologin">auto login</string>
    <string name="intro_activity_title">Balloon</string>
    <string name="posting_write_action_write">write</string>
    <string name="posting_write_activity_title">WRITE POSTING</string>
    <string name="posting_write_edt_title_hint">scroll warn- I\'m the bobburger conqueror!</string>
    <string name="posting_write_txt_title">title</string>
    <string name="posting_write_edt_contents_hint"></string>
    <string name="posting_write_txt_contents">contents</string>
    <string name="map_address">ya</string>
    <string name="landmark_write_action_write">write</string>    
    <string name="title_activity_photo_zoom">PhotoZoom</string> 
<<<<<<< HEAD
    <string name="user_profile_main_level">class</string>
    <string name="user_profile_user_name">cow hukhuk</string>
    <string name="user_profile_level">class: </string>
    <string name="user_profile_user_level">angmeongeongnuengdeng?</string>
    <string name="title_activity_configurations">Configurations</string>
    <string name="start_service">balloonhead start!</string>
    <string name="stop_service">balloonhead stop!</string>
<<<<<<< HEAD
    <string name="wordbubble_text">malmalmal</string>
=======
    <string name="user_profile_main_level">계급</string>
    <string name="user_profile_user_name">횡성한우헠헠</string>
    <string name="user_profile_level">계급 : </string>
    <string name="user_profile_user_level">앙멍엉능뎅?</string>
    <string name="title_activity_configurations">Configurations</string>
    <string name="start_service">벌룬헤드 시작!!</string>
    <string name="stop_service">벌룬헤드 종료 ㅠㅠ</string>
    <string name="wordbubble_text">말말말말말말말말말말말말말말말말말말말말말말말말말말</string>
    
>>>>>>> no_hangle?
=======
    <string name="wordbubble_text">Hello</string>
    <string name="my_profile">MyProfile</string>
    <string name="preferecen">PREFERENCE</string>
    <string name="overflow">OverFlow</string>
>>>>>>> actionbar overflow and myComment intent set

>>>>>>> sb
=======
>>>>>>> conflict solved
</resources>