<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/map_list_action_bubble" 
        android:orderInCategory="1" 
        android:title="@string/map_list_action_bubble"
        android:showAsAction="ifRoom|withText" >
	</item>
    
    <item android:id="@+id/map_list_action_landmark_write" 
        android:orderInCategory="2" 
        android:title="@string/map_list_action_landmark_write"
        android:showAsAction="ifRoom" 
        >
	</item>
	
    <item
        android:id="@+id/overflow"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/overflow"
        android:icon="@drawable/ic_actionbar_overflow">
        <menu>
            <item
                android:id="@+id/preference"
                android:orderInCategory="5"
                android:showAsAction="ifRoom|withText"
                android:title="@string/preferecen"
                android:icon="@drawable/ic_actionbar_preference">
            </item>
            <item
                android:id="@+id/my_profile"
                android:orderInCategory="4"
                android:showAsAction="ifRoom|withText"
                android:title="@string/my_profile">
            </item>
        </menu>
    </item>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings">
    </item>

</menu>
