<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item
        android:id="@+id/overflow"
        android:orderInCategory="3"
        android:showAsAction="ifRoom|withText"
        android:title="@string/overflow">
        <menu>
            <item
                android:id="@+id/preference"
                android:orderInCategory="5"
                android:showAsAction="ifRoom|withText"
                android:title="@string/preferecen"
                android:icon="@drawable/ic_actionbar_preference">
            </item>
            <item
                android:id="@+id/my_profile"
                android:orderInCategory="4"
                android:showAsAction="ifRoom|withText"
                android:title="@string/my_profile">
            </item>
        </menu>
    </item>
    
</menu>
