<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/Join_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp"
        android:ems="10"
        android:hint="@string/login_id" />

    <Button
        android:id="@+id/Join_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Join_Nickname"
        android:layout_below="@+id/Join_Nickname"
        android:layout_marginTop="54dp"
        android:text="@string/Join" />

    <Button
        android:id="@+id/Cancle_btu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Join_btn"
        android:layout_alignBottom="@+id/Join_btn"
        android:layout_alignRight="@+id/Join_Nickname"
        android:layout_marginRight="20dp"
        android:text="@string/cancle" />

    <EditText
        android:id="@+id/Join_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Join_Id"
        android:layout_below="@+id/Join_Id"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/Join_Nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Join_Password"
        android:layout_below="@+id/Join_Password"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/login_nickname" >

        <requestFocus />
    </EditText>

</RelativeLayout>
