<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/posting_write_layout_contents"
        android:layout_width="match_parent"
        android:layout_height="230sp"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posting_write_txt_title" />

                <EditText
                    android:id="@+id/posting_write_edt_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/posting_write_edt_title_hint" >

                    <requestFocus />
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posting_write_txt_contents" />

                <EditText
                    android:id="@+id/posting_write_edt_contents"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:ems="10"
                    android:hint="@string/posting_write_edt_contents_hint"
                    android:inputType="textMultiLine" >

                    <requestFocus />
                </EditText>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/posting_write_layout_contents"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/posting_write_img_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@android:drawable/ic_menu_camera" />
    </LinearLayout>

</RelativeLayout>