<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/landmark_layout_info"
        android:layout_width="match_parent"
        android:layout_height="154dp" >

        <TextView
            android:id="@+id/landmark_tv_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="22dp"
            android:text="@string/landmark_tv_name"
            android:textColor="#000000"
            android:textSize="19dp"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/landmark_tv_contents"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="70dp"
            android:text="@string/landmark_tv_contents"
            android:textColor="#000000"
            android:textSize="9dp"
            android:layout_below="@id/landmark_tv_name" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="130dp"
            android:layout_height="140dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_auil_empty"> 
        </ImageView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/landmark_layout_info" >

        <TabHost
            android:id="@+id/landmark_tabhost"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                </TabWidget>

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:id="@+id/landmark_layout_commentlist"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical" >

                        <ListView
                            android:id="@+id/landmark_commentlist"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true" 
                            android:layout_weight="1"/>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" 
                            android:layout_below="@id/landmark_commentlist">

                            <ImageButton
                                android:id="@+id/landmark_camera_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@android:drawable/ic_menu_camera" />

                            <EditText
                                android:id="@+id/landmark_edit_input_comment"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:hint="@string/edit_message" >

                                <!-- <requestFocus android:layout_width="match_parent" />  -->
                            </EditText>

                            <Button
                                android:id="@+id/landmark_btn_input_comment"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:text="썼다" />
                        </LinearLayout>
                    </LinearLayout>

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </TableRow>

                    <ListView
                        android:id="@+id/landmark_postinglist"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true" />
                </FrameLayout>
            </LinearLayout>
        </TabHost>
    </RelativeLayout>

</RelativeLayout>